--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="home-text-container">
                 <h1 class="home-subtitle">Learn Stock Market Trading from an expert trader in Trivandrum</h1>
                 <p class="home-main-text">Make consistent profits from stock market and avoid loss.</p>
-                <p class="home-second-text">Join our Masterclass program and become the Master of Stock Market trading.
+                <p class="home-second-text">Join our Masterclass program and become the Master of Stock Market Trading.
                 </p>
                 <div class="home-button-container">
                     <button class="home-button1" onclick="window.open('https://forms.gle/3FMJwkmRBdFnLrAU6')">Enroll Now
@@ -272,7 +272,7 @@
 
             <!-- price -->
             <div class="price-info">
-                <p class="now-available">Now available now at just</p>
+                <p class="now-available">Now available at just</p>
                 <p class="price-no">₹ 14,999*</p>
                 <div class="button-container"><button
                         onclick="window.open('https://forms.gle/3FMJwkmRBdFnLrAU6')">Enroll Now</button></div>
@@ -439,7 +439,7 @@
                         major asset classes.<br>
 
                         <br> Dedicated in gathering and transforming information into possibilities that are tailored to your investing requirements
-                        across public and private markets is our primary goal. To Know more dial +91 9605942663. 
+                        across public and private markets is our primary goal. To know more dial +91 9605942663. 
                     </p>
                 </div>
                 <div class="asset-management-img">
@@ -595,7 +595,7 @@
                         <img src="logos/phone-logo.svg" alt="">
                     </div>
                     <div>
-                        <p class="contact-info-titles">Conatct</p>
+                        <p class="contact-info-titles">Contact</p>
                         <p class="contact-info-sub-titles">
                             Mobile: +91 96059 42663
                         </p>
@@ -690,7 +690,7 @@
             </div>
             <div class="box">
                 <div>
-                    <p class="footer-title">services</p>
+                    <p class="footer-title">Services</p>
                     <p class="footer-links"><a href="#services">Mentorship Program</a></p>
                     <p class="footer-links"><a href="#asset">Asset Management Consultancy</a></p>
                 </div>
@@ -698,15 +698,15 @@
             </div>
             <div class="box">
                 <div>
-                    <p class="footer-title">company</p>
-                    <p class="footer-links"><a href="#about">about</a></p>
-                    <p class="footer-links"><a href="privacy-policy.html#disclaimer" target="_blank">disclaimer</a>
+                    <p class="footer-title">Company</p>
+                    <p class="footer-links"><a href="#about">About</a></p>
+                    <p class="footer-links"><a href="privacy-policy.html#disclaimer" target="_blank">Disclaimer</a>
                     </p>
-                    <p class="footer-links"><a href="privacy-policy.html#privacy-policy" target="_blank">privacy
+                    <p class="footer-links"><a href="privacy-policy.html#privacy-policy" target="_blank">Privacy
                             policy</a></p>
-                    <p class="footer-links"><a href="privacy-policy.html#terms-of-use" target="_blank">terms &
-                            conditions</a></p>
-                    <p class="footer-links"><a href="privacy-policy.html#refund-policy" target="_blank">refund
+                    <p class="footer-links"><a href="privacy-policy.html#terms-of-use" target="_blank">Terms &
+                            Conditions</a></p>
+                    <p class="footer-links"><a href="privacy-policy.html#refund-policy" target="_blank">Refund
                             policy</a></p>
                 </div>
 
